--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@
 #header {
   text-align: center;}
 
+#pageContent {
+  margin: 1%;
+  background-color: #000000;
+  color: #ffffff;
+  padding: 0.5em 0;
+
 li {
 	display: inline;
 	padding: 0.5em;}
