--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   margin: 1%;
   background-color: #000000;
   color: #ffffff;
-  padding: 0.5em 0;
+  padding: 0.5em 0;}
 
 li {
 	display: inline;
